# sd-dropbox-backend-mvp

./: .env.example  .gitignore  AGENTS.md  DEPLOY.md  DESIGN.md  Dockerfile  KICKOFF.md  README.md  SPEC.md  design.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  functional.yml  lint.yml
alembic/: env.py
alembic/versions/: 001_initial.py
docs/: mvp-scope.md  system-design.md
src/dropbox/: config.py  database.py  main.py
src/dropbox/models/: __init__.py  block.py  file.py  share.py
src/dropbox/routers/: blocks.py  files.py  sharing.py
src/dropbox/schemas/: block.py  file.py  sharing.py
src/dropbox/services/: block_service.py  file_service.py  sharing_service.py
tests/functional/: conftest.py  test_all_frs.py
tests/unit/: test_block_service.py  test_file_service.py  test_healthz.py  test_sharing_service.py
verify/: manifest.env
verify/acceptance/: conftest.py  test_fr1_upload_dedup.py  test_fr2_download_reconstruct.py  test_fr3_list_files.py  test_fr4_soft_delete.py  test_fr5_conflict_detection.py  test_fr6_share_file.py  test_fr7_list_shares.py  test_fr8_file_metadata.py
